Ajustando segurança e cors.